@@ -115,10 +115,15 @@ sub init {
 		if !-x $Sbuild::Conf::apt_cache;
 	die "dpkg-source binary $Sbuild::Conf::dpkg_source does not exist or isn't executable\n"
 		if !-x $Sbuild::Conf::dpkg_source;
-	die "$Sbuild::Conf::log_dir is not a directory\n"
-		if ! -d $Sbuild::Conf::log_dir;
-	die "$Sbuild::Conf::srcdep_lock_dir is not a directory\n"
-		if ! -d $Sbuild::Conf::srcdep_lock_dir;
+	if (! -d $Sbuild::Conf::log_dir) {
+		mkdir $Sbuild::Conf::log_dir
+			or die "Could not create $Sbuild::Conf::log_dir: $!\n";
+	}
+	if (! -d $Sbuild::Conf::srcdep_lock_dir) {
+		mkdir $Sbuild::Conf::srcdep_lock_dir
+			or die "Could not create $Sbuild::Conf::srcdep_lock_dir: $!\n";
+
+	}
 	die "mailto not set\n" if !$Sbuild::Conf::mailto;
 
 	if (!defined($Sbuild::Conf::build_dir)) {
