@@ -7,6 +7,9 @@ sbuild (0.47) UNRELEASED; urgency=low
       output, and warn appropriately if the output is invalid
       (Closes: #369707).  Output may be invalid if there are no deb-src
       lines in /etc/apt/sources.list in the chroot.
+  * Sbuild/Conf.pm: If $Sbuild::Conf::log_dir or
+    $Sbuild::Conf::srcdep_lock_dir do not exist, try to create them before
+    bailing out (Closes: #369718).
 
  --
 
